--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <title>Dog Breed Classifier</title>
 </head>
 <body>
-  <h2>Upload a dog image</h2>
+  <h2>Upload an image of your deck</h2>
   <input type="file" id="imageInput" />
   <button onclick="submitImage()">Submit</button>
 
-  <h3>Image Preview:</h3>
+  <h2>Upload a video of your deck</h2>
+  <input type="file" id="videoInput" />
+  <button onclick="submitVideo()">Submit</button>
+
+  <h3>Preview:</h3>
   <img id="preview" src="" alt="Image preview" width="300" style="display:none;" />
 
-  <h3>Prediction:</h3>
+  <h3>Pokemon:</h3>
   <ul id="results"></ul>
 
   
